--- a/src/app/componentes/chat/chat.component.html
+++ b/src/app/componentes/chat/chat.component.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="tertiary">
     <ion-button slot="start" fill="clear" (click)="closeChat()">
-      <ion-icon name="close"></ion-icon>
+      <ion-icon style="color:#fff; font-size: 25px" name="arrow-round-back"></ion-icon>
     </ion-button> 
     <ion-title>{{chat.name}}</ion-title>
   </ion-toolbar>
@@ -9,10 +9,13 @@
 
 <ion-content >
 
-  <ul *ngIf = "room">
-    <li *ngFor="let mensaje of room.messages">{{mensaje.content}}</li>
-  </ul>
-
+  <div *ngIf="room">
+    <ion-card *ngFor="let mensaje of room.messages">
+     <ion-card-content>
+        {{mensaje.content}}
+      </ion-card-content>
+    </ion-card>
+  </div>
 
 </ion-content>
 
