--- a/src/app/componentes/login/login.page.html
+++ b/src/app/componentes/login/login.page.html
@@ -14,4 +14,7 @@
     <ion-input type="password" [(ngModel)]="password" name="password"></ion-input>
   </ion-item>
   <ion-button (click)="onSubmitLogin()" expand="block">entrar</ion-button>
+  <br>
+  <p text-center routerLink="/registro">Crear cuenta</p>
+
 </ion-content>
