--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -23,4 +23,13 @@
       </ion-item>
   </ion-list>
 <!--ion-button (click)="onlogout()">desconectarse</!--ion-button-->
+
+
+<ion-fab vertical="bottom" horizontal="end" slot="fixed">
+  <ion-fab-button (click)="createRoom()">
+    <ion-icon name="add"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
+
+
 </ion-content>
