imagenes y uid del usuariopara las  salas

--- a/src/app/componentes/login/login.page.html
+++ b/src/app/componentes/login/login.page.html
@@ -1,20 +1,21 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Iniciar Sesion</ion-title>
+  <ion-toolbar color="primary" >
+    <ion-title  text-center>Acceder</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-  <ion-item>
+<ion-content padding color="secondary">
+  <ion-item color="secondary">
     <ion-label position="floating">Email</ion-label>
     <ion-input type="text" [(ngModel)]="email" name="email"></ion-input>
   </ion-item>
-  <ion-item>
+  <ion-item color="secondary">
     <ion-label position="floating">contraseña</ion-label>
     <ion-input type="password" [(ngModel)]="password" name="password"></ion-input>
   </ion-item>
   <ion-button (click)="onSubmitLogin()" expand="block">entrar</ion-button>
   <br>
   <p text-center routerLink="/registro">Crear cuenta</p>
+  
 
 </ion-content>
