--- a/src/app/componentes/crearchat/crearchat.component.html
+++ b/src/app/componentes/crearchat/crearchat.component.html
@@ -7,13 +7,27 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
+
+<ion-item>
+  <div style="width: 100%; text-align: center; padding-bottom: 1ch; padding-top: 3ch;">
+    <img *ngIf="url_img" style="border-radius:50%" src="{{url_img}}">
+  </div>
+    
+</ion-item>  
+
+
 <ion-item>
   <ion-label position="stacked" >Nombre de la sala</ion-label>
   <ion-input  [(ngModel)]="nameChat"></ion-input>
 </ion-item>
+
 <ion-item>
   <ion-label position="stacked">descripcion</ion-label>
   <ion-input  [(ngModel)]="description"></ion-input>
+</ion-item>
+<ion-item>
+  <ion-label position="stacked">Direccion URL de la imagen:</ion-label>
+  <ion-input  [(ngModel)]="url_img"></ion-input>
 </ion-item>
 <ion-button (click)="onCreate()" expand="block">entrar</ion-button>
 </ion-content>
