--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -22,12 +22,26 @@
         </ion-label>
       </ion-item>
   </ion-list>
+  <ion-list>
+    <ion-item *ngFor = "let chat of chatPrivateRooms" (click)="openPrivateChat(chat)"> 
+      <ion-avatar slot="start">
+        <ion-img [src]="chat.url_img"></ion-img>    
+      </ion-avatar>  
+      <ion-label>
+        <h2><b>{{chat.name}}</b></h2>
+        <p>{{chat.description}}</p>
+      </ion-label>
+    </ion-item>
+</ion-list>
 <!--ion-button (click)="onlogout()">desconectarse</!--ion-button-->
 
 
 <ion-fab vertical="bottom" horizontal="end" slot="fixed">
   <ion-fab-button (click)="createRoom()">
     <ion-icon name="add"></ion-icon>
+  </ion-fab-button>
+  <br><ion-fab-button size="big" color="dark" (click)="createPrivateRoom()">
+    <ion-icon name="lock"></ion-icon>
   </ion-fab-button>
 </ion-fab>
 
