--- a/src/app/componentes/creatchatprivados/creatchatprivados.component.html
+++ b/src/app/componentes/creatchatprivados/creatchatprivados.component.html
@@ -15,26 +15,27 @@
 </ion-item>  
 
 
-<!--ion-item>
+<ion-item>
   <ion-label position="stacked" >Nombre de la sala</ion-label>
-  <ion-input  formControlName="nameChat"></ion-input>
+  <ion-input  [(ngModel)]="nameChat"></ion-input>
 </ion-item>
 
 <ion-item>
   <ion-label position="stacked">descripcion</ion-label>
-  <ion-input   formControlName="description"></ion-input>
+  <ion-input [(ngModel)]="description"></ion-input>
 </ion-item>
 
 <ion-item>
   <ion-label position="stacked">clave de acceso</ion-label>
-  <ion-input   formControlName="password"type="password"></ion-input>
+  <ion-input [(ngModel)]="password" type="password"></ion-input>
 </ion-item>
 <ion-item>
   <ion-label position="stacked">Direccion URL de la imagen:</ion-label>
-  <ion-input   formControlName="url_img"></ion-input>
+  <ion-input [(ngModel)]="url_img"></ion-input>
 </ion-item>
-<ion-button expand="block" type="submit">entrar</ion-button-->
-<form [formGr oup]="FormularioChat" (ngSubmit)="onCreate()">
+<ion-button expand="block" (click)="onCreate()">entrar</ion-button>
+
+  <!--form [formGr oup]="FormularioChat" (ngSubmit)="onCreate()">
   
   <ion-item>
     <label>Nombre de la sala</label>
@@ -57,6 +58,6 @@
   </ion-item>
   
   <button type="submit">entrar</button>
-</form>
+</form-->
 
 </ion-content>
