--- a/src/app/componentes/crearchat/crearchat.component.html
+++ b/src/app/componentes/crearchat/crearchat.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="tertiary">
-    <ion-button slot="start" fill="clear" (click)="closeChat()">
+    <ion-button slot="start" fill="clear" (click)="closeCreate()">
       <ion-icon style="color:#fff; font-size: 25px" name="arrow-round-back"></ion-icon>
     </ion-button> 
     <ion-title>Crear chat</ion-title>
