--- a/src/app/componentes/privatechat/privatechat.component.html
+++ b/src/app/componentes/privatechat/privatechat.component.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar color="tertiary">
+    <ion-button slot="end" fill="clear" (click)="informationRoom()">
+        <ion-icon style="color:#fff" name="information"></ion-icon>
+      </ion-button> 
     <ion-button slot="start" fill="clear" (click)="closeChat()">
       <ion-icon style="color:#fff; font-size: 25px" name="arrow-round-back"></ion-icon>
     </ion-button> 
