--- a/src/app/componentes/crearchat/crearchat.component.html
+++ b/src/app/componentes/crearchat/crearchat.component.html
@@ -1,12 +1,12 @@
 <ion-header>
-  <ion-toolbar color="tertiary">
+  <ion-toolbar color="primary">
     <ion-button slot="start" fill="clear" (click)="closeCreate()">
       <ion-icon style="color:#fff; font-size: 25px" name="arrow-round-back"></ion-icon>
     </ion-button> 
     <ion-title>Crear chat</ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content>
+<ion-content backgroud=""> 
 
 <ion-item>
   <div style="width: 100%; text-align: center; padding-bottom: 1ch; padding-top: 3ch;">
