--- a/src/global.scss
+++ b/src/global.scss
@@ -27,3 +27,4 @@
 
 //material angular
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "~@mobiscroll/angular/dist/css/mobiscroll.scss";
