--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,6 +3,10 @@
 
 /** Ionic CSS Variables **/
 :root {
+   /** font **/  
+
+  --ion-font-family: 'helvetica';
+
   /** primary **/
   --ion-color-primary: #0C3A65;
   --ion-color-primary-rgb: 56, 128, 255;
