--- a/src/app/componentes/privatechat/privatechat.component.scss
+++ b/src/app/componentes/privatechat/privatechat.component.scss
@@ -1,3 +1,10 @@
-#button-menu{
-    
-}
+.privatechat{
+    --background-size: cover;
+    .icon {
+      width: 86px;
+      display: block;
+      margin: 0 auto;
+      margin-top: 4em;
+      padding-bottom: 2em;
+    }
+  }
