--- a/src/app/componentes/registro/registro.page.html
+++ b/src/app/componentes/registro/registro.page.html
@@ -1,21 +1,24 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>registro</ion-title>
+  <ion-toolbar color="primary">
+    <ion-title text-center>registro</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content class="register">
   
-  <ion-item>
-    <ion-label position="floating">Nombre</ion-label>
-    <ion-input type="te" [(ngModel)]="name" name="name"></ion-input>
-  </ion-item>
+  <img class="icon" src="assets/icon/wave2.png" >
 
-  <ion-item>
+  <ion-item style="opacity: 70%;">
+    <ion-label position="floating">Nombre</ion-label>
+    <ion-input type="text" [(ngModel)]="name" name="name"></ion-input>
+  </ion-item>
+  <br>
+  <ion-item style="opacity: 70%;">
     <ion-label position="floating">Email</ion-label>
     <ion-input type="text" [(ngModel)]="email" name="email"></ion-input>
   </ion-item>
-  <ion-item>
+  <br>
+  <ion-item style="opacity: 70%;">
     <ion-label position="floating">contraseña</ion-label>
     <ion-input type="password" [(ngModel)]="password" name="password"></ion-input>
   </ion-item>
@@ -23,7 +26,10 @@
     <ion-label position="floating">confirmar contraseña</ion-label>
     <ion-input type="password" [(ngModel)]="password" name="password"></ion-input>
   </!--ion-item-->
-  <ion-button  expand="block" (click)="onSubmitRegister()">Registrarse</ion-button>
   <br>
-  <p text-center routerLink="/login">ya tengo cuenta</p>
+  <div text-center>
+  <ion-button shape="round" (click)="onSubmitRegister()">Registrarse</ion-button>
+  </div>
+  <br>
+  <p text-center routerLink="/login" style="color:white">ya tengo cuenta</p>
 </ion-content>
