--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,21 +1,22 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-button slot="end" fill="clear" (click)="presentActionSheet()">
-      <ion-icon style="color:#fff" name="menu"></ion-icon>
-    </ion-button>
-    <ion-label></ion-label>
+    <ion-buttons slot="start">
+ 
+    </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-menu-button auto-hide="false" slot="end" fill="clear" (click)="presentActionSheet()"></ion-menu-button>
+    </ion-buttons>
 
-    <ion-checkbox (click)="mis()"></ion-checkbox>
-    <ion-label>Filtrar mis salas</ion-label>
-    <ion-title text-center>
-      Ionic Blank
-    </ion-title >
+    <ion-title>Home</ion-title>
   </ion-toolbar>
+  
 </ion-header>
 
-<ion-content >
+<ion-content>
 
-  <ion-list *ngIf = "!filtrado">
+  <ion-list *ngIf = "!filtrado" >
+     <ion-card color="primary"> 
+       <ion-title>salas publicas</ion-title>
       <ion-item *ngFor = "let chat of chatRooms" (click)="openChat(chat)"> 
         <ion-avatar slot="start">
           <ion-img [src]="chat.url_img"></ion-img>    
@@ -24,9 +25,12 @@
           <h2><b>{{chat.name}}</b></h2>
           <p>{{chat.description}}</p>
         </ion-label>
-      </ion-item>
+      </ion-item> 
+    </ion-card>
   </ion-list>
   <ion-list *ngIf = "!filtrado" >
+    <ion-card color="secondary">
+      <ion-title >salas privadas</ion-title>   
     <ion-item *ngFor = "let chat of chatPrivateRooms" (click)="openPrivateChat(chat)"> 
       <ion-avatar slot="start">
         <ion-img [src]="chat.url_img"></ion-img>    
@@ -36,32 +40,12 @@
         <p>{{chat.description}}</p>
       </ion-label>
     </ion-item>
+  </ion-card>
 </ion-list>
 <!--ion-button (click)="onlogout()">desconectarse</!--ion-button-->
-
-
 <ion-list *ngIf="filtrado">
-  salas privadas filtradas
-  <ion-item *ngFor = "let chat of myPrivateRooms" > 
-    <ion-avatar slot="start">
-      <ion-img [src]="chat.url_img"></ion-img>    
-    </ion-avatar>
-    <ion-grid (click)="openPrivateChat(chat)">
-      <ion-row>
-    <ion-label>
-      <h2><b>{{chat.name}}</b></h2>
-      <p>{{chat.description}}</p>
-    </ion-label>
-  </ion-row>
-  </ion-grid>
-    <ion-button slot="end" fill="clear" (click)="editChat(chat)">
-      <ion-icon style="color:red" name="menu"></ion-icon>
-    </ion-button>
-  </ion-item>
-</ion-list>
-
-<ion-list *ngIf="filtrado">
- salas públicas filtradas
+  <ion-card color="primary">
+  <ion-title>salas publicas</ion-title>
  <ion-item *ngFor = "let chat of myPublicRooms" >   
   <ion-avatar slot="start">
     <ion-img [src]="chat.url_img"></ion-img>    
@@ -78,18 +62,30 @@
     <ion-icon style="color:red" name="menu"></ion-icon>
   </ion-button>
 </ion-item>
+</ion-card>
 </ion-list>
-  
-  
 
-<ion-fab vertical="bottom" horizontal="end" slot="fixed">
-  <ion-fab-button (click)="createRoom()">
-    <ion-icon name="add"></ion-icon>
-  </ion-fab-button>
-  <br><ion-fab-button size="big" color="dark" (click)="createPrivateRoom()">
-    <ion-icon name="lock"></ion-icon>
-  </ion-fab-button>
-</ion-fab>
-
-
+<ion-list *ngIf="filtrado">
+  <ion-card color="secondary" >
+    <ion-title >salas privadas</ion-title>
+  <ion-item *ngFor = "let chat of myPrivateRooms" > 
+    <ion-avatar slot="start">
+      <ion-img [src]="chat.url_img"></ion-img>    
+    </ion-avatar>
+    <ion-grid (click)="openPrivateChat(chat)">
+      <ion-row>
+    <ion-label>
+      <h2><b>{{chat.name}}</b></h2>
+      <p>{{chat.description}}</p>
+    </ion-label>
+  </ion-row>
+  </ion-grid>
+    <ion-button slot="end" fill="clear" (click)="editChat(chat)">
+      <ion-icon style="color:red" name="menu"></ion-icon>
+    </ion-button>
+  </ion-item></ion-card>
+  <div text-center>
+    <ion-button (click)="mis()" shape="round" >listo</ion-button>
+    </div>
+</ion-list>
 </ion-content>
